Font change for readability and display correct answer because I don't know any Pokemon and like to win sometimes

--- a/css/stylez.css
+++ b/css/stylez.css
@@ -1,4 +1,4 @@
-html {
+h1 {
 font-family: 'Press Start 2P', 'cursive';
 }
 
